--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -12,9 +12,8 @@
 // ifdef::backend-pdf[:imagesdir: images]
 // :title-logo-image: image:logo.png[]
 
-TIP: My first Python Tuetorial, if you find a error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Reqquest with your change
+TIP: My first Python Tutorial, if you find a error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Request with your change
 
 [horizontal]
 <<python.adoc#python, What is Python?>> :: A short definitions of what is Python
 <<venv.adoc#venv, How to create a venv?>> :: You find steps to create a virtual environment
-
