Ajustes en los indeces a mostrar

--- a/src/docs/asciidoc/pyscaffold/pyscaffold.adoc
+++ b/src/docs/asciidoc/pyscaffold/pyscaffold.adoc
@@ -1,3 +1,5 @@
 = What is Pyscaffold? 
 
-== Pyscaffold
+== https://pyscaffold.org/en/latest/index.html[Pyscaffold]
+
+Is a tool to seet up your projeect.
