--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -15,6 +15,6 @@
 TIP: My first Python Tutorial, if you find a error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Request with your change
 
 [horizontal]
-<<python.adoc#python, What is Python?>> :: A short definitions of what is Python
-<<venv.adoc#venv, How to create a venv?>> :: Steps to create a virtual environment
-<<pyscaffold.adoc#pyscaffold, How to setup a project?>> :: Setup a project with Pyscaffold
+<<python.adoc#python, Python>> :: What is Python?
+<<venv.adoc#venv, venv>> :: Steps to create a virtual environment
+<<pyscaffold.adoc#pyscaffold, Setup your project>> :: Setup a project with Pyscaffold
