--- a/src/docs/asciidoc/python.adoc
+++ b/src/docs/asciidoc/python.adoc
@@ -1,11 +1,11 @@
 [[python]]
-= What is Python? 
+= Python
 :toc: left
 :toclevels: 4
 :tabsize: 4
 :docinfo1:
 
-== Python
+== What is Python?
 
 Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. Python's simple, easy to learn syntax emphasizes readability and therefore reduces the cost of program maintenance. Python supports modules and packages, which encourages program modularity and code reuse. The Python interpreter and the extensive standard library are available in source or binary form without charge for all major platforms, and can be freely distributed.
 
@@ -14,3 +14,8 @@ Often, programmers fall in love with Python because of the increased productivit
 
 
 Python is a programming language that lets you work quickly and integrate systems more effectivelys
+
+
+== PIP
+
+Tool to install and manage Python packages
