--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,6 +1,6 @@
 = Python
 
-TIP: My first Python Tutorial, if you find a error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Request with your change
+TIP: My first Python Tutorial, if you find an error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Request with your change
 
 [horizontal]
 <<python.adoc#python, Python>> :: What is Python?
